mejoras nuevas de visualizacion

--- a/htmls/obras.html
+++ b/htmls/obras.html
@@ -215,7 +215,7 @@
             <h4>Enlaces</h4>
             <ul class="footer-links">
               <li><a href="#inicio">Inicio</a></li>
-              <li><a href="#acerca">Acerca de mi</a></li>
+              <li><a href="/index.html#acerca">Acerca de mi</a></li>
               <li><a href="htmls/obras.html">Mis obras</a></li>
               <li><a href="#">políticas y privacidad</a></li>
               <li><a href="#">¿deseas colaborar?</a></li>
