--- a/index.html
+++ b/index.html
@@ -69,7 +69,8 @@
    
 <!--   Destacaods-->
    
-   <section class="container destacos-contenedor" id="destacados">
+   <section class="" id="destacados">
+    <div class="container destacos-contenedor">
       <div class="destacados-texto">
        <h2><span>Des</span>tacados</h2>
         <p>Bienvenidos a <span>Destacados</span>, donde cada obra es un universo de color y emoción. Descubre la esencia del arte a través de estas piezas magistrales.</p>
@@ -106,11 +107,13 @@
                 <button type="button" class="btn btn-outline-dark">Ver Todos</button>
             </div>
         </div>
+      </div>
    </section>
    <hr style="width: 50%; margin: 0 auto;">
 <!--   Acerca de mi-->
    
-   <section class="container acerca-contenedor" id="acerca">
+   <section class="bg-about" id="acerca">
+    <div class="container acerca-contenedor">
        <div class="row container py-2 px-0">
            <div class="col">
                <img src="img/logo2-mejorada-removebg-preview.png" loading="lazy" class="container" alt="banner karenHerrera">
@@ -127,9 +130,9 @@
        
        <div class="row">
            <div class="col-12" style="text-align: center; padding-top: 50px; padding-bottom: 30px;">
-               <h3 style="font-size: 28px; font-weight: 600;">Mis Metas</h3>
+               <h3 style="font-size: 28px; font-weight: 600; color: #f1f1f1;">Mis Metas</h3>
            </div>
-           <hr style="width: 50%; margin: 0 auto;">
+           <hr style="width: 40%; margin: 0 auto; color: #000;">
            <div class="row mision-vision">
            <div class="col-lg-4" style="padding-top: 30px;">
                <h3><span>Mi</span>sión:</h3>
@@ -149,6 +152,7 @@ Excelencia: Compromiso con la calidad y la meticulosidad en cada detalle de mi t
            </div>
            </div>
        </div>
+      </div>
    </section>
    
    <hr style="width: 50%; margin: 0 auto;">
@@ -159,7 +163,7 @@ Excelencia: Compromiso con la calidad y la meticulosidad en cada detalle de mi t
         <div class="col tattoo">
             <h2>ta<span>ttoo´s</span></h2>
             <p>Como tatuadora en Medellín, me enfoco en crear tatuajes de alta calidad que reflejen la personalidad y personalidad de mis clientes. Si estás interesado en mis servicios no dudes en contactarme a través de mis redes sociales o dejando tu correo electrónico en la sección "Contáctame". Pronto podrás ver mis productos haciendo clic en mi página. ¡Esperamos crear obras de arte únicas contigo!</p>
-            <button type="button" class="btn btn-success btn-outline-light custom-btn">Próximamente</button>
+            <a href="https://porf-karenherrera.vercel.app/tattoo"  rel="noopener noreferrer" target="_blank" class="boton-tattoo">tattoo</a>
 
         </div>
         <div class="col tattoo-img">
@@ -229,10 +233,10 @@ Excelencia: Compromiso con la calidad y la meticulosidad en cada detalle de mi t
           <div class="col-xs-6 col-md-3">
             <h4><span>Obras </span>Categorias</h4>
             <ul class="footer-links">
-              <li><a href="htmls/obras.html">Todos</a></li>
-              <li><a href="htmls/abstractos.html">Abstractos</a></li>
-              <li><a href="htmls/retratos.html">Retratos</a></li>
-              <li><a href="htmls/frutas.html">Frutas</a></li>
+              <li><a href="/htmls/obras.html">Todos</a></li>
+              <li><a href="/htmls/abstractos.html">Abstractos</a></li>
+              <li><a href="/htmls/retratos.html">Retratos</a></li>
+              <li><a href="/htmls/frutas.html">Frutas</a></li>
               <li><a href="#">Animales y paisajes</a></li>
             </ul>
           </div>
